--- a/.github/workflows/generate-sitemap.yml
+++ b/.github/workflows/generate-sitemap.yml
@@ -25,10 +25,10 @@ jobs:
         run: |
           python generate_sitemap.py
           
-      - name: Commit sitemap
+      - name: Commit sitemap and README
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add sitemap.xml
-          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update sitemap.xml"
+          git add sitemap.xml README.md
+          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update sitemap.xml and README.md"
           git push
